# MarketToolV1

./: CMakeLists.txt  ChatGPTApi.h  MarketToolApi.cpp  MarketToolApi.h  MarketToolApp.cpp  MarketToolApp.h  README.md  chatGPTApi.cpp  main.cpp
